# switchcord

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  cmake_devkitA64.sh  devkita64-libnx.cmake  package_switch.sh.in  switchcord_meta.h.in
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: clang-cxx-dev-tools.cmake  clang-utils.cmake  nx-utils.cmake  switchcord-dev-tools.cmake  switchcord-options.cmake  switchcord-utils.cmake
hooks/: pre-commit
include/: CMakeLists.txt
include/switchcord/: channel.h  gateway.h  guild.h  message.h  user.h  voice.h
src/: CMakeLists.txt  main.cc
